# streamdeck

./: .gitignore  .pre-commit-config.yaml  main.py  prometheus.py  pyproject.toml  requirements.txt  setup.cfg  test_prom.py
src/code_deck/: kubernetes.py  prometheus.py
src/veranda/: __main__.py  beachball.py  deck.py  kubernetes.py  prometheus.py
src/veranda/keys/: __init__.py  base.py  chart.py  emoji.py  image.py  menu.py  multi.py  power.py  prometheus.py  text.py  toggle.py  url.py
src/veranda/utils/: tasks.py
